--- a/src/App.css
+++ b/src/App.css
@@ -105,19 +105,19 @@ video {
   align-items: center;
 }
 #photo-canvas {
-  height: 50vh;
+  /* height: 50vh;
   padding: 5vw;
-  width: 90%;
+  width: 90%; */
 
 }
 
 @media screen and (min-width: 768px){
   #photo-canvas {
-    height: 50vh;
+    /* height: 50vh;
     max-height: 500px;
     padding: 5vw;
     width: 90%;
-    max-width: 500px;
+    max-width: 500px; */
   
   }
 }
