--- a/src/App.css
+++ b/src/App.css
@@ -47,9 +47,9 @@ nav {
   z-index: 123;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
+  justify-content: center;
   font-family: 'VG5000-Regular', sans-serif;
-  font-size: calc(15px + 3vw);
 
   /* padding: 25% 0px; */
   /* border: 2px solid white; */
@@ -74,8 +74,10 @@ nav {
 button:focus {outline:0;}
 
 video {
-  max-width: 100%;
+  max-width: 90%;
+  padding: 10px;
   max-height: 100%;
+  border-radius: 10px !important;
 }
 
 .camera {
@@ -85,11 +87,10 @@ video {
 }
 
 .loading {
-  background: #cccccc;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: rgb(9, 142, 113);
+  color: rgb(0, 0, 0);
 }
 
 
@@ -99,26 +100,41 @@ video {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: white;
+  background: #181818;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color:white;
 }
 #photo-canvas {
   /* height: 50vh;
   padding: 5vw;
   width: 90%; */
-  filter: blur(0.5px)
+  /* filter: blur(0.5px); */
+  /* border-radius: px; */
 
 }
 
 @media screen and (min-width: 768px){
   #photo-canvas {
-    /* height: 50vh;
-    max-height: 500px;
-    padding: 5vw;
-    width: 90%;
-    max-width: 500px; */
+ padding: 5vw;
   
   }
+
+  .label {
+    max-width: 300px;
+    border:1px solid white;
+  }
+}
+
+.labels p {
+  margin: 2px !important;
+}
+.object-label {
+  font-size: calc(18px + 3vw);
+}
+
+.lower-label {
+  font-size: calc(12px + 2vw);
+
 }
