--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,23 @@
-.App {
-  text-align: center;
+.app {
+  display:flex;
+  flex-direction: column;
+  /* text-align: center; */
+}
+.navbar {
+  width: 90%;
+  height: 10%;
+  min-height: 50px;
+  /* border: 1px solid white; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0px 5vw;
 }
 
+button {
+  border: 0px;
+  
+}
 .container {
   width: 100%; 
   height: 100%;
@@ -13,8 +29,8 @@
   text-align: center;
   padding: 1vh 0px;
   display: flex;
+  overflow: hidden;
   flex-direction: column;
-  justify-content: center;
   font-family: 'VG5000-Regular', 'Work-Sans', sans-serif;
 }
 
@@ -25,13 +41,7 @@
 nav {
   z-index: 12;
 }
-.container button {
-  background: white;
-  border-radius: 30px;
-  width: 60px;
-  height: 30px;
-  color: black;
-}
+
 
 .react-html5-camera-photo>img, .react-html5-camera-photo>video {
   width: 90% !important;
@@ -42,7 +52,6 @@ nav {
 
 .labels {
   width: 90%;
-  height: 50%;
   /* border: 1px solid black; */
   z-index: 123;
   display: flex;
@@ -50,47 +59,80 @@ nav {
   align-items: left;
   justify-content: center;
   font-family: 'VG5000-Regular', sans-serif;
-
+  transition: 1s ease-in-out all;
   /* padding: 25% 0px; */
   /* border: 2px solid white; */
 }
 
 .shutter {
-  display:block;
-  position: fixed;
-  bottom: 20px;
-  height: 50px !important;
-  width: 50px !important;
+  /* display:block; */
+  /* position: fixed; */
+  /* bottom: 20px; */
+  height: 70px !important;
+  width: 70px !important;
   color: transparent !important;
-  border-radius: 50%;
-  border: 8px solid rgb(142, 142, 142);
+  border-radius: 100%;
   transition: all .1s;
+  transform: scale(0.75);
+  background-color: #ff5131;
+  border: 0px;
+  padding: 0px !important;
+  /* margin-top: 50px; */
+  cursor: pointer;
 }
 
-.shutter:hover {
-  border: 5px solid rgb(142, 142, 142);
 
-}
+
+
 button:focus {outline:0;}
 
 video {
-  max-width: 90%;
-  padding: 10px;
-  max-height: 100%;
-  border-radius: 10px !important;
+  /* width: 100%;
+  height: 100%; */
+  margin: -5px;
+  pointer-events: none;
+
+  /* border: 1px solid yellow; */
+  /* min-height: 100%; */
+  /* max-width: 90%; */
+  /* padding: 10px; */
+  /* max-height: 80%; */
 }
 
+#video-container {
+  border-radius:40px;
+  overflow:hidden;
+  mask-image: url('./assets/Rectangle.svg');
+  -webkit-mask-image: url('./assets/Rectangle.svg');
+  /* min-height: 60%; */
+  /* height: 70%; */
+  /* width: 80%;
+  height: 60%; */
+  mask-repeat: no-repeat;
+  mask-size: cover;
+  /* padding: 10px; */
+  /* border: 1px solid saddlebrown; */
+  /* border-radius: 10px !important; */
+  /* overflow: hidden;  */
+}
 .camera {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  /* border: salmon 1px solid; */
+  overflow: hidden;
 }
 
 .loading {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: rgb(0, 0, 0);
+  justify-content: center;
+
+  color: rgb(255, 255, 255);
 }
 
 
@@ -107,6 +149,10 @@ video {
   color:white;
 }
 #photo-canvas {
+  border-radius: 10px;
+
+  /* width: 100%; */
+  /* height: 0%; */
   /* height: 50vh;
   padding: 5vw;
   width: 90%; */
@@ -115,18 +161,92 @@ video {
 
 }
 
+#canvas-container {
+
+}
+
+
+@media screen and (max-width: 768px){
+  video {
+    width: 100%;
+    height: 100%;
+    margin: -5px;
+    /* border: 1px solid yellow; */
+    /* min-height: 100%; */
+    /* max-width: 90%; */
+    /* padding: 10px; */
+    /* max-height: 80%; */
+  }
+  
+  #video-container {
+    border-radius:10px;
+    overflow:hidden;
+    /* mask-image: url('./assets/Rectangle.svg'); */
+    /* -webkit-mask-image: url('./assets/Rectangle.svg'); */
+    /* min-height: 60%; */
+    /* height: 70%; */
+    width: 90%;
+    /* margin: ; */
+    /* height: 60%; */
+    mask-repeat: no-repeat;
+    mask-size: cover;
+    /* padding: 10px; */
+    /* border: 1px solid saddlebrown; */
+    /* border-radius: 10px !important; */
+    /* overflow: hidden;  */
+  }
+}
 @media screen and (min-width: 768px){
   #photo-canvas {
- margin: 5vw;
+ /* margin: 5vw; */
+ max-width: 600px;
+ max-height: 600px;
+    /* width: 100%; */
+    /* height: 100%; */
+    border-radius: 10px !important;
+
+  }
+
+  .photo-container{
+    /* width: 50% !important; */
+    /* max-width: 50%; */
+    /* max-height: 50%; */
+    /* border: 1px solid white; */
+    border-radius: 10px;
+    margin: 10px;
+  }
+
+  .labels {
+    width: 100%;
+    text-align: center;
+    /* left: 50vw; */
+    /* transform: translate(-50%); */
+    /* margin:0px 25%; */
+    /* border: 1px solid white; */
+  }
+  .object-label {
+    font-size: calc(42px) !important;
+  }
+  
+  .lower-label {
+    font-size: calc(28px) !important;
   
   }
 
-  .label {
-    /* max-width: 300px; */
-    border:1px solid white;
-    align-items: center !important;
-    left: 50%;
-    transform: translate(-50%, 0);
+}
+
+@media screen and (max-width: 321px){
+  .object-label {
+    font-size: calc(22px) !important;
+  }
+  
+  .lower-label {
+    font-size: calc(18px) !important;
+  
+  }
+  .bottom {
+    flex:0 !important;
+    display: none !important;
   }
 }
 
@@ -134,7 +254,7 @@ video {
   margin: 2px !important;
 }
 .object-label {
-  font-size: calc(18px + 3vw);
+  font-size: calc(18px + 3.1vw);
 }
 
 .lower-label {
@@ -147,6 +267,7 @@ video {
   width: 90%;
   height: 100%;
   display: flex;
+  flex: 1;
   flex-direction: row;
   text-align: left;
   align-items: flex-end;
@@ -154,7 +275,78 @@ video {
 
 .bottom-button {
   color:white;
-  font-size: large;
+  /* margin: 20px 0px; */
+  background: transparent !important;
+  display: flex;
+  flex-direction: row;
+  margin-left: -20px;
+}
+.btn-black {
+  width: 185px ;
+  height: 44px ;
+  border: 0px;
+  font-family: 'VG5000-Regular', sans-serif;
+  color:white;
+  overflow: hidden;
+  font-size: 20px;
+
+  background-color: #2862ff;
+  border-radius: 6px;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.4);
+}
+
+.home-text-div {
+  text-align: left;
+  width: 90%;
+  max-width: 500px;
+  padding: 5vw
+}
+
+.info-button {
+  border-radius: 100%;
+  height: 32px;
+  padding: 0px !important;
+  width: 32px !important;
+  font-size: 18px;
+  font-weight: bold;
+  color: #181818;
+  background: #eeeeee;
+}
+
+.info {
+  background: #2a62ff !important;
+  background-color: #2a62ff;
+
+}
+
+.photo-container {
   margin: 20px 0px;
-  
+  transition: 1.2s ease-in-out all;
+}
+
+.reimaginings {
+  width: 90%;
+  height: 25%;
+}
+
+.info-text-div {
+  text-align: left;
+  padding: 5vw;
+}
+
+.info-text-div p {
+  padding: 0px;
+  margin: 15px;
+  font-family: 'Work Sans', sans-serif;
+}
+
+.info-text-div p a {
+  color: white;
+  text-decoration: none;
+  opacity: 0.6;
+}
+
+
+.info-text-div p a:hover {
+ opacity: 1;
 }
